# plotters-ratatui-backend

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: 3d-plot.rs  boilerplate.rs  charts.rs  errorbar.rs  mandelbrot.rs  normal-dist.rs
src/: lib.rs  widget.rs
tests/: test.rs
