[package]
name = "plotters-ratatui-backend"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/plotters-ratatui-backend"
readme = "README.md"
description = "Ratatui widget to draw a plotters chart"

[dependencies]
plotters-backend = "0.3.5"
ratatui = "0.25.0"
thiserror = "1.0.50"
plotters = {version = "0.3.5", optional = true}
log = "0.4.20"

[features]
default = ["widget"]
widget = ["dep:plotters"]

[dev-dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
flexi_logger = "0.27.2"
plotters = "0.3.5"
