[package]
name = "plotters-ratatui-backend"
version = "0.1.3"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/plotters-ratatui-backend"
readme = "README.md"
description = "Ratatui widget to draw a plotters chart"

[dependencies]
plotters-backend = "0.3.5"
ratatui = "0.26.0"
thiserror = "1.0.50"
plotters = {version = "0.3.5", optional = true, default-features = false}
log = "0.4.20"

[features]
default = ["widget"]
widget = ["dep:plotters"]

[dev-dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
flexi_logger = "0.27.2"
itertools = "0.12.1"
num-traits = "0.2.17"
plotters = "0.3.5"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"

